--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,6 +23,9 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        <li>
+            <a><span id="busuanzi_container_site_pv">접속횟수: <span id="busuanzi_value_site_pv"></span>회</span></a>
+        </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Menu<b class="caret"></b></a>
           <ul class="dropdown-menu">
