--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,15 +16,15 @@
           <a href="{{ '/' | prepend: site.baseurl }}">Home</a>
         </li>
         <li>
-          <a href="{{ '/categories/' | prepend: site.baseurl }}">大类分解</a>
+          <a href="{{ '/categories/' | prepend: site.baseurl }}">대분류</a>
         </li>
         <li>
-          <a href="{{ '/tag' | prepend: site.baseurl }}">小类内聚</a>
+          <a href="{{ '/tag' | prepend: site.baseurl }}">소분류</a>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-            <a><span id="busuanzi_container_site_pv">접속횟수: <span id="busuanzi_value_site_pv"></span>회</span></a>
+            <a><span id="busuanzi_container_site_pv"><span id="busuanzi_value_site_pv"> </span>회 접속</span></a>
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Menu<b class="caret"></b></a>
@@ -32,9 +32,9 @@
             <li><a rel="nofollow" target="_blank" href="{{site.github}}">Github</a></li>
             <li><a rel="nofollow" target="_blank" href="{{site.resume_site}}">Resume</a></li>
             <li class="divider"></li>
-            <li><a rel="nofollow" href="{{ '/books' | prepend: site.baseurl }}">My List</a></li>
-            <li><a rel="nofollow" href="{{ '/reference' | prepend: site.baseurl }}">Reference</a></li>
-            <li><a href="{{ '/feed.xml' | prepend: site.baseurl }}">RSS订阅</a></li>
+            <li><a rel="nofollow" href="{{ '/books' | prepend: site.baseurl }}">나의 메뉴</a></li>
+            <li><a rel="nofollow" href="{{ '/reference' | prepend: site.baseurl }}">참고</a></li>
+            <li><a href="{{ '/feed.xml' | prepend: site.baseurl }}">RSS</a></li>
           </ul>
         </li>
       </ul>
