--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,10 +16,10 @@
           <a href="{{ '/' | prepend: site.baseurl }}">홈</a>
         </li>
         <li>
-          <a href="{{ '/categories/' | prepend: site.baseurl }}">대분류</a>
+          <a href="{{ '/categories/' | prepend: site.baseurl }}"></a>
         </li>
         <li>
-          <a href="{{ '/tag' | prepend: site.baseurl }}">소분류</a>
+          <a href="{{ '/tag' | prepend: site.baseurl }}">태그</a>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
