--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,7 +16,7 @@
           <a href="{{ '/' | prepend: site.baseurl }}">홈</a>
         </li>
         <li>
-          <a href="{{ '/categories/' | prepend: site.baseurl }}"></a>
+          <a href="{{ '/categories/' | prepend: site.baseurl }}">카테고리</a>
         </li>
         <li>
           <a href="{{ '/tag' | prepend: site.baseurl }}">태그</a>
