--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,7 +30,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Menu<b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a rel="nofollow" target="_blank" href="{{site.github}}">Github</a></li>
-            <li><a rel="nofollow" target="_blank" href="{{site.resume_site}}">Resume</a></li>
+            <li><a href="{{ '/resume/' | prepend: site.baseurl }}">Resume</a></li>
             <li class="divider"></li>
             <li><a rel="nofollow" href="{{ '/books' | prepend: site.baseurl }}">나의 메뉴</a></li>
             <li><a rel="nofollow" href="{{ '/reference' | prepend: site.baseurl }}">참고</a></li>
