--- a/_includes/lefttree.html
+++ b/_includes/lefttree.html
@@ -1,5 +1,5 @@
 <div id="navigation">
-  <h1>Tags</h1>
+  <h1>Jump To</h1>
   <ul class="nav sidenav">
   </ul>
   <div style="height: 200px;width: 200px;">
